adding the use of zod-to-openapi
