# src/controllers/student.ts
@@ -34,6 +34,17 @@ studentRouter.get(
   setAuthorizedRoles([ZRole.enum.Admin]),
   isAuthenticated,
   async (req, res) => {
+    /* 
+    #swagger.tags = ['students']
+    #swagger.requestBody = {
+      content: {
+        "application/json": {
+          schema: { $ref: "#components/schemas/ZStudentFind" }
+        }
+      }
+    } 
+    */
+
     // Validating twice, can it be better? To-Do
     const { query } = ZStudentFind.parse(req);
 
@@ -53,6 +64,9 @@ studentRouter.get(
 );
 
 studentRouter.get('/:id', isAuthenticated, async (req, res) => {
+  /* 
+    #swagger.tags = ['students']
+  */
   const { params } = ZUserGetOne.parse(req);
 
   const student = await getUser(params.id, 'Student');
@@ -65,6 +79,16 @@ studentRouter.post(
   setAuthorizedRoles([ZRole.enum.Admin]),
   isAuthenticatedTest('id'),
   async (req, res) => {
+    /* 
+    #swagger.tags = ['students']
+    #swagger.requestBody = {
+      content: {
+        "application/json": {
+          schema: { $ref: "#components/schemas/ZStudentPost" }
+        }
+      }
+    } 
+    */
     const { body } = ZStudentPost.parse(req);
 
     const user = { ...body, userDetails: undefined, student: undefined };
@@ -81,6 +105,16 @@ studentRouter.put(
   setAuthorizedRoles([ZRole.enum.Admin]),
   isAuthenticated,
   async (req, res) => {
+    /* 
+    #swagger.tags = ['students']
+    #swagger.requestBody = {
+      content: {
+        "application/json": {
+          schema: { $ref: "#components/schemas/ZStudentPut" }
+        }
+      }
+    } 
+    */
     const { params, body } = ZStudentPut.parse(req);
 
     const user = { ...body, userDetails: undefined, student: undefined };
@@ -101,6 +135,9 @@ studentRouter.delete(
   setAuthorizedRoles([ZRole.enum.Admin]),
   isAuthenticated,
   async (req, res) => {
+    /* 
+    #swagger.tags = ['students']
+  */
     const { params } = ZUserDelete.parse(req);
 
     const deletedStudent = await deleteUser(params.id, 'Student');
