# swagger-output.json
@@ -18,6 +18,10 @@
     {
       "name": "fees",
       "description": "fees routes"
+    },
+    {
+      "name": "students",
+      "description": "students routes"
     }
   ],
   "paths": {
@@ -101,6 +105,9 @@
     },
     "/api/student/": {
       "get": {
+        "tags": [
+          "students"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -110,9 +117,21 @@
           "401": {
             "description": "Unauthorized"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/ZStudentFind"
+              }
+            }
+          }
         }
       },
       "post": {
+        "tags": [
+          "students"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -125,11 +144,23 @@
           "403": {
             "description": "Forbidden"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/ZStudentPost"
+              }
+            }
+          }
         }
       }
     },
     "/api/student/{id}": {
       "get": {
+        "tags": [
+          "students"
+        ],
         "description": "",
         "parameters": [
           {
@@ -151,6 +182,9 @@
         }
       },
       "put": {
+        "tags": [
+          "students"
+        ],
         "description": "",
         "parameters": [
           {
@@ -169,9 +203,21 @@
           "401": {
             "description": "Unauthorized"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/ZStudentPut"
+              }
+            }
+          }
         }
       },
       "delete": {
+        "tags": [
+          "students"
+        ],
         "description": "",
         "parameters": [
           {
@@ -732,9 +778,6 @@
     },
     "/api/fee/": {
       "get": {
-        "tags": [
-          "fees"
-        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -747,9 +790,6 @@
         }
       },
       "post": {
-        "tags": [
-          "fees"
-        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -762,9 +802,6 @@
         }
       },
       "put": {
-        "tags": [
-          "fees"
-        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -779,9 +816,6 @@
     },
     "/api/fee/{serial}": {
       "get": {
-        "tags": [
-          "fees"
-        ],
         "description": "",
         "parameters": [
           {
@@ -806,9 +840,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "fees"
-        ],
         "description": "",
         "parameters": [
           {
@@ -950,6 +981,243 @@
             "description": "Unauthorized"
           }
         }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "ZStudentPost": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "maxLength": 64,
+            "format": "email"
+          },
+          "username": {
+            "type": "string",
+            "maxLength": 64
+          },
+          "password": {
+            "type": "string",
+            "minLength": 6,
+            "maxLength": 64
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "Student",
+              "Teacher",
+              "Admin"
+            ]
+          },
+          "userDetails": {
+            "type": "object",
+            "properties": {
+              "firstName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "lastName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "gender": {
+                "type": "string",
+                "enum": [
+                  "Male",
+                  "Female"
+                ]
+              },
+              "mobile": {
+                "type": "string",
+                "maxLength": 20
+              },
+              "registerDate": {
+                "type": "string",
+                "nullable": true
+              },
+              "dateOfBirth": {
+                "type": "string",
+                "nullable": true
+              },
+              "bloodGroup": {
+                "type": "string",
+                "enum": [
+                  "O+",
+                  "O-",
+                  "A+",
+                  "A-",
+                  "B+",
+                  "B-",
+                  "AB+",
+                  "AB-"
+                ]
+              },
+              "address": {
+                "type": "string",
+                "maxLength": 64
+              }
+            }
+          },
+          "student": {
+            "type": "object",
+            "properties": {
+              "classId": {
+                "type": "string",
+                "nullable": true,
+                "maxLength": 6
+              },
+              "studyYear": {
+                "type": "string",
+                "enum": [
+                  "1",
+                  "2",
+                  "3"
+                ]
+              },
+              "educationType": {
+                "type": "string",
+                "enum": [
+                  "Sceiences",
+                  "Literature",
+                  "Other"
+                ]
+              },
+              "parentName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "parentPhonenumber": {
+                "type": "string",
+                "maxLength": 64
+              }
+            },
+            "required": [
+              "studyYear"
+            ]
+          }
+        },
+        "required": [
+          "role",
+          "userDetails",
+          "student"
+        ]
+      },
+      "ZStudentPut": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "maxLength": 64,
+            "format": "email"
+          },
+          "userDetails": {
+            "type": "object",
+            "properties": {
+              "firstName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "lastName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "gender": {
+                "type": "string",
+                "enum": [
+                  "Male",
+                  "Female"
+                ]
+              },
+              "mobile": {
+                "type": "string",
+                "maxLength": 20
+              },
+              "registerDate": {
+                "type": "string",
+                "nullable": true
+              },
+              "dateOfBirth": {
+                "type": "string",
+                "nullable": true
+              },
+              "bloodGroup": {
+                "type": "string",
+                "enum": [
+                  "O+",
+                  "O-",
+                  "A+",
+                  "A-",
+                  "B+",
+                  "B-",
+                  "AB+",
+                  "AB-"
+                ]
+              },
+              "address": {
+                "type": "string",
+                "maxLength": 64
+              }
+            },
+            "required": [
+              "firstName",
+              "lastName",
+              "gender",
+              "mobile",
+              "registerDate",
+              "dateOfBirth",
+              "bloodGroup",
+              "address"
+            ]
+          },
+          "student": {
+            "type": "object",
+            "properties": {
+              "classId": {
+                "type": "string",
+                "nullable": true,
+                "maxLength": 6
+              },
+              "studyYear": {
+                "type": "string",
+                "enum": [
+                  "1",
+                  "2",
+                  "3"
+                ]
+              },
+              "educationType": {
+                "type": "string",
+                "enum": [
+                  "Sceiences",
+                  "Literature",
+                  "Other"
+                ]
+              },
+              "parentName": {
+                "type": "string",
+                "maxLength": 64
+              },
+              "parentPhonenumber": {
+                "type": "string",
+                "maxLength": 64
+              }
+            },
+            "required": [
+              "classId",
+              "studyYear",
+              "educationType",
+              "parentName",
+              "parentPhonenumber"
+            ]
+          }
+        },
+        "required": [
+          "email",
+          "userDetails",
+          "student"
+        ]
       }
     }
   }
